--- a/extras.css
+++ b/extras.css
@@ -119,3 +119,20 @@ select {
 input:focus, textarea:focus {
   outline: 1px solid var(--grey);;
 }
+
+
+.overlay {
+  position: fixed; 
+  display: none; 
+  width: 100%; 
+  height: 100%; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 99; 
+  cursor: pointer; 
+  justify-content: center;
+  align-items: center;
+}
