--- a/extras.css
+++ b/extras.css
@@ -103,6 +103,10 @@ p {
   font-size: 0.7rem;
 }
 
+.p-0 {
+  padding: 0;
+}
+
 input, textarea, select {
   padding: 0.75rem 0.5rem;
   border-radius: 0.5rem;
