--- a/print.css
+++ b/print.css
@@ -138,4 +138,9 @@
   .arrow-wrapper {
     display: none;
   }
+  .pcp-section .section-content {
+    height: auto;
+    overflow: visible;
+    padding: 1rem;
+  }
 }
