--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,6 @@
 }
 .long-line {
   width: 100%;
-  /* margin-bottom: 4px; */
 }
 
 .short-line {
@@ -173,9 +172,7 @@
 #meeting-lead, #meeting-coach, #meeting-date {
   width: calc( 100% - 10.2rem );
 }
-/* #carrots, #sticks, #oa, #ra {
-  min-height: 6rem;
-} */
+
 #opening {
   min-height: 8rem;
 }
@@ -207,8 +204,7 @@
   width: 50%;
 }
 
-a,
-a:visited {
+a, a:visited {
   /* background-color: transparent; */
   color: #0067b8;
   text-decoration: none;
@@ -284,7 +280,6 @@ a:visited {
   margin: 0;
 }
 
-/* Hide the browser's default checkbox */
 .container input {
   position: absolute;
   opacity: 0;
@@ -293,7 +288,7 @@ a:visited {
   width: 0;
 }
 
-/* Create a custom checkbox */
+
 .checkmark {
   position: absolute;
   top: 50%;
@@ -311,19 +306,16 @@ a:visited {
   background-color: var(--green);
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
   content: "";
   position: absolute;
   display: none;
 }
 
-/* Show the checkmark when checked */
 .container input:checked ~ .checkmark:after {
   display: block;
 }
 
-/* Style the checkmark/indicator */
 .container .checkmark:after {
   left: 9px;
   top: 5px;
@@ -339,8 +331,7 @@ input:-internal-autofill-selected {
   background-color: var(--white);
 }
 
-@media (min-width: 768px) {
-
+/* @media (min-width: 768px) {
   body {
     font-size: 1.125rem;
   }
@@ -353,7 +344,7 @@ input:-internal-autofill-selected {
   .tabs .tab {
     order: 9;
   }
-}
+} */
 
 .helper-text {
   position: absolute;
@@ -383,7 +374,6 @@ input:-internal-autofill-selected {
   border-color: var(--darkBlue) transparent transparent transparent;
 }
 
-
 .extra-space:hover .helper-text {
   visibility: visible;
 }
@@ -391,10 +381,6 @@ input:-internal-autofill-selected {
 .discver-row textarea, .discover-heading {
   width: calc( 50% - 0.5rem);
 }
-
-
-
-
 
 .generate-wrapper {
   background-color: var(--lightGrey);
