--- a/print.css
+++ b/print.css
@@ -76,6 +76,7 @@
   .tabs label {
     border-bottom: 4px solid var(--green);
     color: var(--green);
+    padding: 0.5rem;
   }
 
 .checkboxes-wrapper label { color: var(--black);}
@@ -125,9 +126,6 @@
   .steps-wrapper .container {
     height: 35px;
   }
-  .tabs label {
-    padding: 0.5rem;
-  }
   .objection, .notes {
     padding: 0;
     overflow: visible;
@@ -157,10 +155,10 @@
   .tabs label.container {
     border: none;
   }
-  footer {
+  .bottom {
     width: 100%;
     height: 3rem;
   }
-  footer br { display: none;}
-  footer p { margin: 0; }
+  .bottom br { display: none;}
+  .bottom p { margin: 0; }
 }
