--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,8 @@
   margin-bottom: 1rem;
 }
 
-.swift-logo {
-  width: 2.3rem;
-  height: 2.3rem;
-  margin-right: 0.7rem;
+.swift-logo, .first-assist-wrapper {
+  width: 15rem;
 }
 
 .pcp-section {
@@ -232,6 +230,7 @@ a, a:visited {
   font-size: 1.2rem;
   font-weight: 700;
   text-transform: uppercase;
+  position: relative;
 }
 
 .tabs label .material-icons {
@@ -293,8 +292,8 @@ a, a:visited {
   top: 50%;
   transform: translateY(-50%);
   left: 5px;
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   background-color: var(--lightGrey);
   border: 0.5px solid var(--grey);
   border-radius: 3px;
@@ -303,6 +302,7 @@ a, a:visited {
 /* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
   background-color: var(--green);
+  border-color: var(--green);
 }
 
 .checkmark:after {
@@ -316,12 +316,12 @@ a, a:visited {
 }
 
 .container .checkmark:after {
-  left: 9px;
-  top: 5px;
+  left: 7px;
+  top: 3px;
   width: 5px;
   height: 10px;
   border: solid white;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2.5px 2.5px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
