--- a/extras.css
+++ b/extras.css
@@ -38,9 +38,11 @@ main {
 .justify-center {
   justify-content: center;
 }
-
 .justify-between {
   justify-content: space-between;
+}
+.justify-end {
+  justify-content: flex-end;
 }
 .items-center {
   align-items: center;
@@ -89,11 +91,11 @@ main {
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 h2 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 h3 {
