--- a/extras.css
+++ b/extras.css
@@ -121,7 +121,6 @@ input, textarea, select {
   border: 0.5px solid var(--grey);
   color: var(--darkGrey);
   font-family: "Montserrat", sans-serif;
-  /* min-height: 2.7rem; */
   min-height: 42px;
 }
 input::placeholder, textarea::placeholder {
@@ -137,7 +136,14 @@ select {
 }
 
 input:focus, textarea:focus {
-  outline: 1px solid var(--grey);;
+  outline: 1px solid var(--grey);
+  color: var(--darkGrey);
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: var(--darkGrey)!important;
 }
 
 .overlay {
